--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
-// {
-//     "python.pythonPath": "/home/moringa/Documents/News-updates/virtual/bin/python3.8"
-// }
+{
+    "python.pythonPath": "/home/moringa/Documents/News-updates/virtual/bin/python3.8"
+}
